--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
         <div class="divider-custom-line"></div>
       </div>
 
-      <!-- Portfolio Grid Items -->
+      <!-- TRIPTICO Grid Items -->
       <div class="row">
 
-        <!-- Portfolio Item 1 -->
+        <!-- TRIPTICO 1  -->
         <div class="col-md-6 col-lg-4">
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
@@ -98,11 +98,11 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="" alt="">
+            <img class="img-fluid" src="img/triptico1v3.png" alt="">
           </div>
         </div>
 
-        <!-- Portfolio Item 2 -->
+        <!-- TRIPTICO Item 2 -->
         <div class="col-md-6 col-lg-4">
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal2">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
@@ -114,7 +114,7 @@
           </div>
         </div>
 
-        <!-- Portfolio Item 3 -->
+        <!-- TRIPTICO Item 3 -->
         <div class="col-md-6 col-lg-4">
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal3">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
@@ -126,7 +126,7 @@
           </div>
         </div>
 
-        <!-- Portfolio Item 4 -->
+        <!-- TRIPTICO Item 4 -->
         <div class="col-md-6 col-lg-4">
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
@@ -138,7 +138,7 @@
           </div>
         </div>
 
-        <!-- Portfolio Item 5 -->
+        <!-- TRIPTICO Item 5 -->
         <div class="col-md-6 col-lg-4">
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal5">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
@@ -150,7 +150,7 @@
           </div>
         </div>
 
-        <!-- Portfolio Item 6 -->
+        <!-- TRIPTICO Item 6 -->
         <div class="col-md-6 col-lg-4">
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal6">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
